Summary Keyframes can't be selected with Box Selection in the dopesheet (Grease Pencil context) #64995

Closed
opened 2019-05-22 17:27:59 +02:00 by Matias Mendiola · 8 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.35

Blender Version
Broken: version: 2.80 (sub 71), branch: master (modified), commit date: 2019-05-22 11:15, hash: b82afb4b01
Worked: (optional)

Short description of error
In the Dopesheet, the Summary Keyframes can't be selected in Grease Pencil context using Box selection (B key)

Exact steps for others to reproduce the error

  • Open Blender in 2D Animation Template
  • Draw strokes in different frames (1, 10, 20 for example)
  • Try to select the generated summary keyframes in the Dopesheet using Box selection (B key)

Captura_1.PNG

**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.35 **Blender Version** Broken: version: 2.80 (sub 71), branch: master (modified), commit date: 2019-05-22 11:15, hash: `b82afb4b01` Worked: (optional) **Short description of error** In the Dopesheet, the Summary Keyframes can't be selected in Grease Pencil context using Box selection (B key) **Exact steps for others to reproduce the error** - Open Blender in 2D Animation Template - Draw strokes in different frames (1, 10, 20 for example) - Try to select the generated summary keyframes in the Dopesheet using Box selection (B key) ![Captura_1.PNG](https://archive.blender.org/developer/F7061161/Captura_1.PNG)
Author
Member

Added subscriber: @mendio

Added subscriber: @mendio

#65058 was marked as duplicate of this issue

#65058 was marked as duplicate of this issue
Antonio Vazquez was assigned by William Reynish 2019-05-22 17:35:16 +02:00
Antonio Vazquez removed their assignment 2019-05-22 17:37:17 +02:00

Added subscribers: @WilliamReynish, @angavrilov, @antoniov

Added subscribers: @WilliamReynish, @angavrilov, @antoniov

@WilliamReynish I haven't idea of how work this... I think this maybe is for @angavrilov (he knows how works this area)

@WilliamReynish I haven't idea of how work this... I think this maybe is for @angavrilov (he knows how works this area)
Alexander Gavrilov was assigned by William Reynish 2019-05-22 17:44:41 +02:00

Well, the root cause is that ANIM_animchannel_keyframes_loop can only work with BezTriple keyframes. I think a proper fix requires somehow generalizing it to support the other types - maybe by adding more callbacks for each type, or some other way. Of course a simpler fix could be to hack it in the selection operator - currently it seems all selection of GP and Mask keyframes is hacks instead of using generic code, so it won't become much worse than it is.

Well, the root cause is that ANIM_animchannel_keyframes_loop can only work with BezTriple keyframes. I think a proper fix requires somehow generalizing it to support the other types - maybe by adding more callbacks for each type, or some other way. Of course a simpler fix could be to hack it in the selection operator - currently it seems all selection of GP and Mask keyframes is hacks instead of using generic code, so it won't become much worse than it is.
Member

Added subscribers: @WayneDixon, @lichtwerk

Added subscribers: @WayneDixon, @lichtwerk

This issue was referenced by b79aeb5ca1

This issue was referenced by b79aeb5ca10215e5b641bfc6b3202b7ac899257e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64995
No description provided.